# onecoder

./: .coverage  .gitignore  Makefile  README.md  SPECIFICATION.md  SPECIFICATION.yaml  pyproject.toml
.sprint/001-add-sprint-tests/: README.md  RETRO.md  TODO.md  sprint.yaml
.sprint/002-test-sprint/: README.md  sprint.yaml
.sprint/003-s1/: README.md  TODO.md  sprint.yaml
.sprint/004-life/: README.md  TODO.md  sprint.yaml
onecoder/: __init__.py  alignment.py  cli.py  config_manager.py  constants.py  env_manager.py  issues.py  logger.py
onecoder/ai_sprint/: checks.py  cli.py  commit.py  guidance.py  policy.py  preflight.py  spec_validator.py  state.py  submodule.py  sync_engine.py  telemetry.py  trace.py  visual_generator.py
onecoder/ai_sprint/commands/: assets.py  common.py  plan.py  sprint.py  task.py  utility.py
onecoder/ai_sprint/commands/governance/: close.py  commit.py  engine.py  preflight.py  utils.py  verify.py
onecoder/ai_sprint/schemas/: sprint.schema.json
onecoder/commands/: agent.py  agent.test.py  doctor.py  guide.py  issue.py
onecoder/domain/: __init__.py  entities.py  value_objects.py
onecoder/repositories/: __init__.py  markdown_issue_repo.py  yaml_sprint_repo.py
onecoder/services/: __init__.py  alignment_service.py  governance_service.py
tests/: test_sprint.py
